Fix centering on smaller screens

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -446,11 +446,15 @@ p.stuff:hover, a:focus, a:active {
 
 
 @media (max-width: 600px) {
-.full-image > img {
-  max-width: 85%;
-  margin-bottom: 30px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
-}
+  .full-image {
+    text-align: center;
+    margin: 0  auto;
+  }  
+  .full-image > img {
+    max-width: 300px;
+    margin-bottom: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
+  }
 }
 
 
